Update: Page Bikes Internal

--- a/css/sass/_bikeInternal.scss
+++ b/css/sass/_bikeInternal.scss
@@ -27,3 +27,11 @@
   border: 0;
   border-radius: 4px;
 }
+
+.seguros-mobile {
+  @include responsive(s) {
+    img {
+      display: none;
+    }
+  }
+}
