--- a/css/sass/_layout.scss
+++ b/css/sass/_layout.scss
@@ -368,6 +368,10 @@ $gutter: 32px;
   background-color: rgba(27, 105, 210, 0.2);
 }
 
+.bg-white-light {
+  background-color: $white-light;
+}
+
 .bg-black-dark {
   background-color: $black-dark;
 }
