--- a/css/style.scss
+++ b/css/style.scss
@@ -54,6 +54,7 @@ img {
 @import "sass/menu";
 @import "sass/bikes";
 @import "sass/bikeInternal";
+@import "sass/seguros";
 @import "sass/icons";
 @import "sass/buttons";
 @import "sass/footer";
