Update: Page Seguros

--- a/css/sass/_seguros.scss
+++ b/css/sass/_seguros.scss
@@ -78,3 +78,38 @@ form {
     background-size: cover;
   }
 }
+
+// Section locais
+.local {
+  &::after {
+    content: "";
+    display: block;
+    position: absolute;
+
+    width: 12px;
+    height: 8px;
+
+    top: 16px;
+    left: -18px;
+
+    background-color: $primary-light;
+  }
+}
+
+.clock {
+  &::after {
+    content: "";
+    display: block;
+    position: absolute;
+
+    width: 20px;
+    height: 20px;
+
+    top: 3px;
+    left: -26px;
+
+    background-image: url("../../svg/icon-relogio.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+}
