:bookmark: Convertendo em React...

--- a/src/css/sass/_colors.scss
+++ b/src/css/sass/_colors.scss
@@ -12,7 +12,7 @@ $black-normal: #111111;
 $black-dark: #000000;
 $black-light: #2E2E2E;
 
-$white-normal: #e8ebf0;
+$white-normal: #f7f7f7;
 $white-dark: #d8dbe3;
 $white-light: #ffffff;
 
