--- a/src/css/sass/_layout.scss
+++ b/src/css/sass/_layout.scss
@@ -576,7 +576,7 @@ $gutter: 32px;
       top: -15px;
       left: -40px;
 
-      background-image: url("../../svg/aspas-left.svg");
+      background-image: url("../svg/aspas-left.svg");
       background-repeat: no-repeat;
       background-size: cover;
     }
@@ -593,7 +593,7 @@ $gutter: 32px;
       bottom: -15px;
       right: -15px;
 
-      background-image: url("../../svg/aspas-right.svg");
+      background-image: url("../svg/aspas-right.svg");
       background-repeat: no-repeat;
       background-size: cover;
     }
@@ -628,7 +628,7 @@ $gutter: 32px;
       width: 13px;
       height: 9px;
 
-      background-image: url("../../svg/lista.svg");
+      background-image: url("../svg/lista.svg");
       background-repeat: no-repeat;
       background-size: cover;
 
