--- a/src/css/sass/_seguros.scss
+++ b/src/css/sass/_seguros.scss
@@ -113,3 +113,105 @@ form {
     background-size: cover;
   }
 }
+
+// Page Seguros
+.accordion-container div:nth-child(even) {
+  background-color: $white-normal;
+}
+
+
+.accordion-item {
+  // background-color: $white-normal;
+  padding: 20px 40px;
+  border-radius: 4px;
+  cursor: pointer;
+
+  position: relative;
+
+  &::after {
+    content: "";
+    display: block;
+    position: absolute;
+
+    width: 12px;
+    height: 8px;
+
+    top: 30px;
+    left: 15px;
+
+    background-color: $primary-light;
+  }
+
+  &::before {
+    content: "";
+    display: block;
+    position: absolute;
+
+    width: 16px;
+    height: 8px;
+
+    cursor: pointer;
+
+    top: 30px;
+    right: 15px;
+
+    background-image: url("../svg/arrow-down.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+}
+.accordion-item.active {
+  &::before {
+    background-image: url("../svg/arrow-up.svg");
+  }
+}
+
+.accordion-title {
+  font-family: "Poppins", sans-serif;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.accordion-content {
+  font-family: "Poppins", sans-serif;
+  font-size: 18px;
+  margin-top: 16px;
+  background-color: transparent !important;
+}
+
+.q {
+  position: relative;
+  cursor: pointer;
+
+  &::after {
+    content: "";
+    display: block;
+    position: absolute;
+
+    width: 12px;
+    height: 8px;
+
+    top: 11px;
+    left: -20px;
+
+    background-color: $primary-light;
+  }
+
+  &::before {
+    content: "";
+    display: block;
+    position: absolute;
+
+    width: 16px;
+    height: 8px;
+
+    cursor: pointer;
+
+    top: 11px;
+    right: -20px;
+
+    background-image: url("../svg/arrow-down.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+}
