--- a/src/css/sass/_layout.scss
+++ b/src/css/sass/_layout.scss
@@ -396,6 +396,14 @@ $gutter: 32px;
   }
 }
 
+.shaddow-white-full-bw {
+  box-shadow: inset 0 -80px $black-dark, inset 0 80px $white-light;
+
+  @include responsive(s) {
+    box-shadow: none;
+  }
+}
+
 // Section Hero
 .hero {
   @include responsive(s) {
