--- a/src/css/style.css
+++ b/src/css/style.css
@@ -556,6 +556,15 @@
   }
 }
 
+.shaddow-white-full-bw {
+  box-shadow: inset 0 -80px #000000, inset 0 80px #ffffff;
+}
+@media screen and (max-width: 960px) {
+  .shaddow-white-full-bw {
+    box-shadow: none;
+  }
+}
+
 @media screen and (max-width: 960px) {
   .hero {
     flex-direction: column;
