--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -55,6 +55,7 @@ img {
 @import "sass/bikes";
 @import "sass/bikeInternal";
 @import "sass/seguros";
+@import "sass/carrinho";
 @import "sass/icons";
 @import "sass/buttons";
 @import "sass/footer";
