--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2165,7 +2165,7 @@ form {
 .choice-bike-container {
   background-color: #2E2E2E;
   display: flex;
-  align-items: center;
+  align-items: start;
   margin-top: 24px;
 }
 .choice-bike-container .choice-bike {
@@ -2189,9 +2189,15 @@ form {
 .choice-bike-container .choice-bike.selected p {
   color: #000000;
 }
+.choice-bike-container .bike-info {
+  display: none;
+}
 
 .choice-bike-container.active {
   background-color: #ffffff;
+}
+.choice-bike-container.active .bike-info {
+  display: inline-flex;
 }
 
 .icon {
